# olympia-g1

./: .gitignore  AUTHORS.md  BUILD_HISTORY.md  CLAUDE.md  CMakeLists.txt  README.md
doc/: 64bit-refactoring-plan.md  What  modernization-prototypes-playbook.md
g1/mapgen/: mapgen.c  z.c
g1/olympia/: beast.c  build.c  c1.c  c2.c  cloud.c  code.c  dir.c  display.c  faery.c  gate.c  glob.c  legacy.h  loc.c  main.c  make.c  move.c  oly.h  order.c  perm.c  produce.c  quest.c  seed.c  sout.c  storm.c  summary.c  use.c  z.c  z.h
lib/: lists.h
mapgen/: mapgen.c  proto.h  z.c  z.h
olympia/: add.c  adv.c  alchem.c  art.c  basic.c  build.c  buy.c  c1.c  c2.c  check.c  cloud.c  code.c  combat.c  day.c  dir.c  dir.h  display.c  eat.c  etc.h  faery.c  garr.c  gate.c  glob.c  gm.c  hades.c  immed.c  input.c  io.c  loop.h  lore.c  main.c  move.c  necro.c  npc.c  oly.h  order.c  perm.c  produce.c  proto.h  quest.c  (+17 more)
run/: g1-olympia.sh  olympia-g1.sh
run/g1/mapgen/: mapgen.sh
run/g1/olympia/: .gitignore
run/mapgen/: mapgen.sh
tests/g1/mapgen/fixtures/: Cities  Map
tests/g1/mapgen/golden/: road
tests/g1/olympia/: golden_check.sh
tests/g1/olympia/golden/: gate  item  loc  system  unform
tests/g1/olympia/golden/fact/: 100  207  210
tests/g1/olympia/golden/save/1/: 100  200
tests/mapgen/fixtures/: Regions
tests/mapgen/golden/: gate  loc
tests/olympia/: golden_check.sh
tests/olympia/fixtures/: lib.tgz
tests/olympia/golden/: manifest.sha256  misc  road  times_0  times_press  times_rumor
tests/olympia/golden/fact/: 200  202  203  204  205  206
tests/olympia/golden/save/1/: 202  203  204  205  206  210  players
